Fixed responsiveness on mobile

--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: "Lexend Deca", sans-serif;
     font-family: "Big Shoulders Display", cursive;
     font-family: "Lexend Deca", sans-serif;
-    font-size: 15px;
+    font-size: 1rem;
     background-color: hsl(0, 0%, 95%);
     height: 100%;
     box-sizing: border-box;
@@ -10,81 +10,82 @@ body {
     padding: 0;
   }
   
-  .main_section {
-    display: flex;
+  main{
     margin: auto;
-    justify-content: center;
+    width: 100%;
+  }
+
+  /* layout */
+
+  .main-section{
+    display: flex;
+    width: 60%;
+    margin: auto;
+    height: 100vh;
     align-items: center;
-    height: 100%;
-    width: 50%;
-    padding: 100px;
+
+  }
+
+  .container{
+    width: 20%;
+    padding: 3rem;
   }
   
-  .container1 {
+   .container1 {
     background-color: hsl(31, 77%, 52%);
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     box-shadow: 5px 0 3px hsl(184, 100%, 22%);
-    margin-right: 3px;
-    padding: 30px 25px;
-    width: 230px;
-    flex: 30%;
+    margin-right: 2px;
   }
   
   .container2 {
     background-color: hsl(184, 100%, 22%);
     box-shadow: 5px 0 3px hsl(179, 100%, 13%);
-    margin-right: 3px;
-    padding: 30px 25px;
-    width: 230px;
-    flex: 30%;
+    margin-right: 2px;
   }
   
   .container3 {
     background-color: hsl(179, 100%, 13%);
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
-    padding: 30px 25px;
-    width: 230px;
-    flex: 30%;
   }
   
+/* -------Typography------- */
+
   .first_paragraph {
     color: hsla(0, 0%, 100%, 0.75);
-    font-size: 15px;
+    font-size: 1rem;
   }
   
   .heading {
     color: hsl(0, 0%, 95%);
-    font-size: 30px;
+    font-size: 1.8rem;
     font-weight: 700px;
     letter-spacing: -2px;
   }
+
+  /* -------Style------- */
   
   .button {
     background-color: hsl(0, 0%, 95%);
     width: 120px;
     height: 35px;
-    padding: 5px;
+    padding: 0.2rem;
     margin-top: 50px;
-    margin-bottom: 20px;
     border: none;
     font-family: inherit;
     border-radius: 60px;
     font-weight: bold;
     cursor: pointer;
   }
-  
-  .button1 {
-    color: hsl(31, 77%, 52%);
-    text-decoration: none;
-  }
 
   .button1 > a{
     color: hsl(31, 77%, 52%);
     text-decoration: none;
+    border: none;
   }
-  
+
   .button2 {
     color: hsl(184, 100%, 22%);
   }
@@ -93,75 +94,82 @@ body {
     color: hsl(179, 100%, 13%);
   }
 
-  .button1 > a:hover {
+  .button1 > a:hover{
+    background-color: hsl(31, 77%, 52%);
+    color: hsl(0, 0%, 95%);
+  }
+  
+  .button1:hover{
     border: 2px solid hsl(0, 0%, 95%);
     background-color: hsl(31, 77%, 52%);
     color: hsl(0, 0%, 95%);
   }
   
-  .button1:hover {
-    border: 2px solid hsl(0, 0%, 95%);
-    background-color: hsl(31, 77%, 52%);
-    color: hsl(0, 0%, 95%);
-  }
-  
-  .button2:hover {
+  .button2:hover{
     border: 2px solid hsl(0, 0%, 95%);
     background-color: hsl(184, 100%, 22%);
     color: hsl(0, 0%, 95%);
   }
   
-  .button3:hover {
+  .button3:hover{
     border: 2px solid hsl(0, 0%, 95%);
     background-color: hsl(179, 100%, 13%);
     color: hsl(0, 0%, 95%);
   }
 
-  @media screen and (max-width: 1440px){
-    .main_section{
-        flex-direction: row;
+  /* -------responsiveness and media queries------ -*/
+
+  @media(min-width: 1440px){
+    .main-section{
+        display: flex;
+        width: 100%;
+        height: 100vh;
     }
   }
 
-  @media screen and (max-width: 375px){
-    .main_section{
+  @media(min-width: 1440px){
+    .container{
+        width:33%;
+        padding: 0;
+        font-size: 0.5rem;
+    }
+  }
+
+  @media(max-width: 375px){
+    .main-section{
+        display: flex;
         flex-direction: column;
         margin-top: 15px;
-        flex-wrap: wrap;
         margin: auto;
         width: 100%;
+        height: 100%;
     }
   }
 
+  @media(max-width: 375px){
+    .container{
+        margin: 15px;
+        width: 50%;
+        border-radius: 8px;
+    }
+  }
 
-  @media screen and (max-width: 375px){
+  @media(max-width: 375px){
     .container1{
-        flex-direction: column;
-        margin: 15px;
-        flex-wrap: wrap;
-        border-radius: 8px;
-    }
-  }
-  
-  @media screen and (max-width: 375px){
-    .container2{
-        flex-direction: column;
-        margin: 15px;
-        flex-wrap: wrap;
-        border-radius: 8px;
+        margin-right: 0;
+        box-shadow: none;
     }
   }
 
-  @media screen and (max-width: 375px){
-    .container3{
-        flex-direction: column;
-        margin: 15px;
-        flex-wrap: wrap;
-        border-radius: 8px;
+  @media(max-width: 375px){
+    .container2{
+        margin-right: 0;
+        box-shadow: none;
     }
   }
-  
-  
-  /* - Mobile: 375px
-  - Desktop: 1440px */
-  
+
+  @media(max-width: 375px){
+    .container3{
+        margin-right: 0;
+    }
+  }
